--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>test.project</groupId>
-    <artifactId>hello</artifactId>
+    <artifactId>testProjectUsers</artifactId>
 
 
 
     <packaging>war</packaging>
     <version>1.0</version>
-    <name>hello</name>
+    <name>testProjectUsers</name>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
